--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ h6 {
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-family: "cairo", sans-serif;
-  font-size: 13px;
+  font-size: 18px;
   font-weight: 600;
   color: #fff;
   white-space: nowrap;
@@ -543,6 +543,7 @@ section {
   padding-bottom: 15px;
 }
 
+
 .section-header h3::before {
   content: "";
   position: absolute;
@@ -569,6 +570,11 @@ section {
   text-align: center;
   padding-bottom: 30px;
   color: #333;
+}
+.section-header h5{
+  font-size: 20px;
+  color: #111;
+  font-weight: 700;
 }
 
 /* Section with background
@@ -2172,4 +2178,14 @@ section {
   text-align: center;
   font-size: 13px;
   color: #ddd;
+}
+
+ul .gfield_radio {
+  margin: 6px 0;
+  padding: 0;
+  display: -moz-inline-stack;
+    display: inline-block;
+    letter-spacing: inherit;
+    vertical-align: middle;
+    cursor: pointer
 }
