--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,13 @@
 --------------------------------------------------------------*/
 body {
   background: #fff;
-  color: #666666;
+  color: #212121;
   font-family: "cairo", sans-serif;
   direction: rtl;
 }
 
 a {
-  color: #477afa;
+  color: #F4D96E;
   transition: 0.5s;
   text-decoration: none;
 }
@@ -18,7 +18,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-  color: #477afa;
+  color: #F4D96E;
   outline: none;
   text-decoration: none;
 }
@@ -50,7 +50,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #477afa;
+  background: #F4D96E;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -64,7 +64,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #477afa;
+  background: #F4D96E;
   color: #fff;
 }
 
@@ -91,7 +91,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #477afa;
+  border-top: 6px solid #F4D96E;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -135,7 +135,6 @@ h6 {
   font-weight: 700;
   letter-spacing: 3px;
   padding-left: 10px;
-  border-left: 4px solid #477afa;
 }
 
 #header .logo a {
@@ -143,7 +142,8 @@ h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 120px;
+  
 }
 
 @media (max-width: 992px) {
@@ -200,13 +200,13 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .navbar .dropdown ul {
   display: block;
   position: absolute;
-  left: 14px;
+  left: 30px;
   top: calc(100% + 30px);
   margin: 0;
   padding: 10px 0;
@@ -216,6 +216,7 @@ h6 {
   background: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
+  border-radius: 5px;
 }
 
 .navbar .dropdown ul li {
@@ -225,7 +226,9 @@ h6 {
 .navbar .dropdown ul a {
   padding: 10px 20px;
   text-transform: none;
-  color: #666666;
+  color: #212121;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .navbar .dropdown ul a i {
@@ -235,7 +238,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .navbar .dropdown:hover>ul {
@@ -304,7 +307,7 @@ h6 {
 .navbar-mobile .mobile-nav-toggle {
   position: absolute;
   top: 15px;
-  right: 15px;
+  left: 15px;
 }
 
 .navbar-mobile ul {
@@ -330,7 +333,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .navbar-mobile .getstarted,
@@ -365,7 +368,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -516,12 +519,12 @@ h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #477afa;
+  background: #F4D96E;
 }
 
 #hero .btn-get-started:hover {
   background: #fff;
-  color: #477afa;
+  color: #F4D96E;
 }
 
 /*--------------------------------------------------------------
@@ -561,7 +564,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #477afa;
+  background: #F4D96E;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -648,7 +651,7 @@ section {
 }
 
 #featured-services i {
-  color: #477afa;
+  color: #F4D96E;
   font-size: 48px;
   display: inline-block;
   line-height: 1;
@@ -665,7 +668,7 @@ section {
 }
 
 #featured-services h4 a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #featured-services p {
@@ -720,7 +723,7 @@ section {
   height: 64px;
   text-align: center;
   position: absolute;
-  background-color: #477afa;
+  background-color: #F4D96E;
   border-radius: 50%;
   border: 4px solid #fff;
   left: calc(50% - 32px);
@@ -743,7 +746,7 @@ section {
 }
 
 #about .about-col:hover i {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #about .about-col h2 {
@@ -760,7 +763,7 @@ section {
 }
 
 #about .about-col h2 a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #about .about-col p {
@@ -789,7 +792,7 @@ section {
 }
 
 #services .icon i {
-  color: #477afa;
+  color: #F4D96E;
   font-size: 36px;
   line-height: 0;
   transition: 0.5s;
@@ -807,7 +810,7 @@ section {
 }
 
 #services .box:hover .title a {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #services .description {
@@ -820,7 +823,7 @@ section {
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/portfolio/IMG_1984.png) fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -851,8 +854,8 @@ section {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #477afa;
-  border: 2px solid #477afa;
+  background: #F4D96E;
+  border: 2px solid #F4D96E;
 }
 
 /* Call To Action Section
@@ -917,7 +920,7 @@ section {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #facts .counters p {
@@ -953,7 +956,7 @@ section {
   padding: 10px 20px;
   font-size: 12px;
   line-height: 20px;
-  color: #666666;
+  color: #212121;
   border-radius: 4px;
   text-transform: uppercase;
   background: #fff;
@@ -963,7 +966,7 @@ section {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #477afa;
+  background: #F4D96E;
   color: #fff;
 }
 
@@ -1025,7 +1028,7 @@ section {
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: #477afa;
+  background: #F4D96E;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -1074,7 +1077,7 @@ section {
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -1107,11 +1110,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #477afa;
+  border: 1px solid #F4D96E;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #477afa;
+  background-color: #F4D96E;
 }
 
 .portfolio-details .portfolio-info {
@@ -1176,11 +1179,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #477afa;
+  border: 1px solid #F4D96E;
 }
 
 #clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #477afa;
+  background-color: #F4D96E;
 }
 
 /* Testimonials Section
@@ -1258,11 +1261,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #477afa;
+  border: 1px solid #F4D96E;
 }
 
 #testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #477afa;
+  background-color: #F4D96E;
 }
 
 /* Team Section
@@ -1332,7 +1335,7 @@ section {
 }
 
 #team .member .social a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #team .member .social i {
@@ -1355,7 +1358,7 @@ section {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #contact .contact-info address,
@@ -1377,7 +1380,7 @@ section {
 }
 
 #contact .contact-info a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #contact .contact-address,
@@ -1393,12 +1396,29 @@ section {
   #contact .contact-email {
     padding: 20px 0;
   }
+  #contact .php-email-form select{
+    padding: 10px 10px;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 15px;
+    border-color: #eee;
+   
+  }
+ 
 }
 
 @media (min-width: 768px) {
   #contact .contact-phone {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
+  }
+  #contact .php-email-form select{
+    padding: 10px 10px;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 15px;
+    border-color: #eee;
+   
   }
 }
 
@@ -1424,7 +1444,7 @@ section {
 #contact .php-email-form .sent-message {
   display: none;
   color: #fff;
-  background: #477afa;
+  background: #F4D96E;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1444,7 +1464,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #477afa;
+  border: 3px solid #F4D96E;
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
 }
@@ -1461,14 +1481,30 @@ section {
   font-size: 15px;
 }
 
+#contact .php-email-form label{
+  padding: 8px 14px;
+  border-radius: 0;
+  box-shadow: none;
+  font-size: 15px;
+ 
+}
+#contact .php-email-form select{
+  padding: 10px 10px;
+  border-radius: 0;
+  box-shadow: none;
+  font-size: 15px;
+  border-color: #eee;
+ 
+}
+
 #contact .php-email-form input::focus,
 #contact .php-email-form textarea::focus {
-  background-color: #477afa;
+  background-color: #F4D96E;
 }
 
 #contact .php-email-form button[type=submit] {
-  background: #477afa;
-  border: 0;
+  background: #F4D96E;
+  border: 5px;
   padding: 10px 30px;
   color: #fff;
   transition: 0.4s;
@@ -1521,12 +1557,12 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .entry .entry-meta {
   margin-bottom: 15px;
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .entry .entry-meta ul {
@@ -1549,7 +1585,7 @@ section {
 }
 
 .blog .entry .entry-meta a {
-  color: #666666;
+  color: #212121;
   font-size: 14px;
   display: inline-block;
   line-height: 1;
@@ -1572,11 +1608,11 @@ section {
   transition: 0.3s;
   font-size: 14px;
   border-radius: 50px;
-  border: 2px solid #477afa;
+  border: 2px solid #F4D96E;
 }
 
 .blog .entry .entry-content .read-more a:hover {
-  background: #477afa;
+  background: #F4D96E;
   color: #fff;
 }
 
@@ -1596,7 +1632,7 @@ section {
 }
 
 .blog .entry .entry-content blockquote p {
-  color: #666666;
+  color: #212121;
   line-height: 1.6;
   margin-bottom: 0;
   font-style: italic;
@@ -1611,7 +1647,7 @@ section {
   top: 0;
   bottom: 0;
   width: 3px;
-  background-color: #477afa;
+  background-color: #F4D96E;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -1622,17 +1658,17 @@ section {
 }
 
 .blog .entry .entry-footer i {
-  color: #477afa;
+  color: #F4D96E;
   display: inline;
 }
 
 .blog .entry .entry-footer a {
-  color: #666666;
+  color: #212121;
   transition: 0.3s;
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1705,12 +1741,12 @@ section {
 }
 
 .blog .blog-author .social-links a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .blog-author p {
   font-style: italic;
-  color: #666666;
+  color: #212121;
 }
 
 .blog .blog-comments {
@@ -1741,7 +1777,7 @@ section {
 
 .blog .blog-comments .comment h5 a {
   font-weight: bold;
-  color: #666666;
+  color: #212121;
   transition: 0.3s;
 }
 
@@ -1751,7 +1787,7 @@ section {
 
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .blog-comments .comment h5 .reply i {
@@ -1792,7 +1828,7 @@ section {
 
 .blog .blog-comments .reply-form input:focus {
   box-shadow: none;
-  border-color: #666666;
+  border-color: #212121;
 }
 
 .blog .blog-comments .reply-form textarea {
@@ -1803,7 +1839,7 @@ section {
 
 .blog .blog-comments .reply-form textarea:focus {
   box-shadow: none;
-  border-color: #666666;
+  border-color: #212121;
 }
 
 .blog .blog-comments .reply-form .form-group {
@@ -1814,7 +1850,7 @@ section {
   border-radius: 50px;
   padding: 10px 30px;
   border: 0;
-  background-color: #477afa;
+  background-color: #F4D96E;
 }
 
 .blog .blog-comments .reply-form .btn-primary:hover {
@@ -1822,7 +1858,7 @@ section {
 }
 
 .blog .blog-pagination {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .blog-pagination ul {
@@ -1838,7 +1874,7 @@ section {
 }
 
 .blog .blog-pagination li a {
-  color: #477afa;
+  color: #F4D96E;
   padding: 6px 20px;
   display: flex;
   align-items: center;
@@ -1849,7 +1885,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-  background: #477afa;
+  background: #F4D96E;
   border-radius: 50px;
 }
 
@@ -1907,7 +1943,7 @@ section {
   font-size: 16px;
   padding: 0 30px;
   margin: -1px;
-  background: #477afa;
+  background: #F4D96E;
   color: #fff;
   transition: 0.3s;
   line-height: 0;
@@ -1937,7 +1973,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .sidebar .categories ul a span {
@@ -1967,7 +2003,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 .blog .sidebar .recent-posts time {
@@ -1996,7 +2032,7 @@ section {
   font-size: 14px;
   padding: 6px 20px;
   margin: 0 6px 8px 0;
-  border: 1px solid #477afa;
+  border: 1px solid #F4D96E;
   display: inline-block;
   border-radius: 50px;
   transition: 0.3s;
@@ -2004,7 +2040,7 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  background: #477afa;
+  background: #F4D96E;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2040,7 +2076,7 @@ section {
   font-family: "cairo", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #477afa;
+  border-left: 4px solid #F4D96E;
 }
 
 #footer .footer-top .footer-info p {
@@ -2072,7 +2108,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #477afa;
+  background: #F4D96E;
   color: #fff;
 }
 
@@ -2100,7 +2136,7 @@ section {
 }
 
 #footer .footer-top h4::after {
-  background: #477afa;
+  background: #F4D96E;
   width: 60px;
 }
 
@@ -2133,7 +2169,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #477afa;
+  color: #F4D96E;
 }
 
 #footer .footer-top .footer-contact {
@@ -2155,7 +2191,7 @@ section {
 }
 
 #footer .footer-top .footer-newsletter input[type=submit] {
-  background: #477afa;
+  background: #F4D96E;
   border: 0;
   width: 35%;
   padding: 6px 0;
