--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -781,7 +781,11 @@ section {
   background-size: cover;
   padding: 60px 0 40px 0;
 }
-
+@media (max-width: 768px) {
+#services img{
+width: 100%;
+}
+}
 #services .box {
   margin-bottom: 30px;
 }
