--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,7 +381,6 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: #000;
   overflow: hidden;
   position: relative;
 }
@@ -404,15 +403,13 @@ h6 {
 }
 
 #hero .carousel-item {
+  background: url('assets/img/copy_5A4F370D-C1A5-4605-B9B6-B71FC756F427.mov');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-#hero .carousel-item::before {
-  content: "";
-  background-color: rgba(48, 48, 48, 0.7);
-}
+
 
 #hero .carousel-container {
   display: flex;
@@ -681,7 +678,7 @@ section {
 /* About Us Section
 --------------------------------*/
 #about {
-  background: url("../img/about-bg.jpg") center top no-repeat fixed;
+  background: url("../img/portfolio/executives-reviewing-last-report1.png") center top no-repeat fixed;
   background-size: cover;
   padding: 60px 0 40px 0;
   position: relative;
@@ -781,9 +778,13 @@ section {
   background-size: cover;
   padding: 60px 0 40px 0;
 }
+#services img{
+  padding-right: 160px;
+}
 @media (max-width: 768px) {
 #services img{
 width: 100%;
+padding-right:0;
 }
 }
 #services .box {
