--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -783,7 +783,7 @@ section {
 }
 
 .services .icon-box .icon i {
-  color: #fbab1f;
+  color: #F4D96E;
   font-size: 28px;
   transition: ease-in-out 0.3s;
 }
@@ -800,7 +800,7 @@ section {
   transition: ease-in-out 0.3s;
 }
 .services .icon-box h4 a:hover {
-  color: #fbab1f;
+  color: #F4D96E;
 }
 .services .icon-box p {
   line-height: 24px;
@@ -818,7 +818,7 @@ section {
 button{
   -moz-text-align-last: left;
   text-align-last: left;
-  border:4px solid #c4c3c3;
+  border:4px solid #F4D96E;
   display: inline-block;
   background: #c4c4c3;
   color: #fff;
@@ -827,9 +827,9 @@ button{
   font-size: 14px;
 }
 button:hover{
-  background-color: #fbab1f;
+  background-color: #F4D96E;
    color: #fff; 
-   border:4px solid #fbab1f;
+   border:4px solid #F4D96E;
 }
 
 
@@ -1578,14 +1578,30 @@ body.is-preload .tiles article {
 --------------------------------*/
 #team {
   background: #fff;
-  padding: 60px 0;
+  padding: 80px 0;
 }
 
 #team .member {
   text-align: center;
   margin-bottom: 20px;
-  background: #000;
   position: relative;
+}
+
+#team .member .icon-box {
+  text-align: center;
+  border: 1px solid #ebebeb;
+  padding: 50px 20px;
+  width: 345px;
+  transition: all ease-in-out 0.3s;
+  background: #fff;
+  border-color: #fff;
+  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+  transform: translateY(-10px);
+}
+
+#team .member .icon-box .icon .img {
+ width: 50px;
+ padding: 5px;
 }
 
 #team .member .member-info {
@@ -1602,19 +1618,20 @@ body.is-preload .tiles article {
 }
 
 #team .member .member-info-content {
-  margin-top: -50px;
-  transition: margin 0.2s;
+  margin-top: 50px;
+  transition: margin 0.4s;
 }
 
 #team .member:hover .member-info {
-  background: rgba(0, 0, 0, 0.7);
+  background: #F4D96E;
   opacity: 1;
   transition: 0.4s;
+  padding: 5px;
 }
 
 #team .member:hover .member-info-content {
   margin-top: 0;
-  transition: margin 0.4s;
+  transition: margin 0.5s;
 }
 
 #team .member h4 {
@@ -1625,7 +1642,6 @@ body.is-preload .tiles article {
 }
 
 #team .member span {
-  font-style: italic;
   display: block;
   font-size: 13px;
   color: #fff;
