--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1587,10 +1587,20 @@ body.is-preload .tiles article {
   position: relative;
 }
 
+@media (max-width: 992px) {
+  #team .member {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-right: 15px;
+    position: relative;
+  }
+}
+
+
 #team .member .icon-box {
   text-align: center;
   border: 1px solid #ebebeb;
-  padding: 50px 20px;
+  padding: 50px 50px;
   width: 345px;
   transition: all ease-in-out 0.3s;
   background: #fff;
@@ -1598,6 +1608,21 @@ body.is-preload .tiles article {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
   transform: translateY(-10px);
 }
+
+@media (max-width: 992px) { 
+  #team .member .icon-box{
+    text-align: center;
+    border: 1px solid #ebebeb;
+    padding: 50px 50px;
+    width: 300px;
+    transition: all ease-in-out 0.3s;
+    background: #fff;
+    border-color: #fff;
+    box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+    transform: translateY(-10px);
+  }
+}
+
 
 #team .member .icon-box .icon .img {
  width: 50px;
@@ -1619,14 +1644,14 @@ body.is-preload .tiles article {
 
 #team .member .member-info-content {
   margin-top: 50px;
-  transition: margin 0.4s;
+  transition: margin 0.2s;
 }
 
 #team .member:hover .member-info {
   background: #F4D96E;
   opacity: 1;
-  transition: 0.4s;
-  padding: 5px;
+  transition: 0.2s;
+  padding: 4px;
 }
 
 #team .member:hover .member-info-content {
